fixed header z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,22 +1,22 @@
 @import '../styles/_variables.scss';
-
 app {
-  display: block;
-  height: 100%;
-  width: 100%;
+    display: block;
+    height: 100%;
+    width: 100%;
 }
 
 .container {
-  height: 100%;
-  padding-top: $header-height;
+    height: 100%;
+    padding-top: $header-height;
 }
 
 .content {
-  min-height: 100%;
+    min-height: 100%;
 }
 
 c-header {
-  position: fixed;
-  left: 0;
-  top: 0;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 100;
 }
